# fidelityfx-rs

./: .gitmodules  Cargo.toml  LICENSE.txt  README.md  release.toml
fidelityfx-lib/: Cargo.toml
fidelityfx-lib/src/: lib.rs
sys/: Cargo.toml  README.md  bindgen.rs  build.rs
sys/shader_permutations/dx12/: ffx_frameinterpolation_compute_game_vector_field_inpainting_pyramid_pass_16bit_permutations.h  ffx_frameinterpolation_compute_game_vector_field_inpainting_pyramid_pass_1c9cfb7b224584c9bf9c6aa467e51c86.h  ffx_frameinterpolation_compute_game_vector_field_inpainting_pyramid_pass_wave64_16bit_ba2b87900432ba063ea5e8c2fda433de.h  ffx_frameinterpolation_compute_game_vector_field_inpainting_pyramid_pass_wave64_16bit_permutations.h.d  ffx_frameinterpolation_compute_game_vector_field_inpainting_pyramid_pass_wave64_permutations.h  ffx_frameinterpolation_compute_inpainting_pyramid_pass_6044367fa58fd6043d31c765f8a80786.h  ffx_frameinterpolation_compute_inpainting_pyramid_pass_permutations.h  ffx_frameinterpolation_compute_inpainting_pyramid_pass_wave64_16bit_c6ef23ae00a13785c6b605979ecaa01a.h  ffx_frameinterpolation_compute_inpainting_pyramid_pass_wave64_9adbdaa7d757e995d5ef6ec50586c609.h  ffx_frameinterpolation_compute_inpainting_pyramid_pass_wave64_permutations.h.d  ffx_frameinterpolation_debug_view_pass_16bit_permutations.h  ffx_frameinterpolation_debug_view_pass_fa49a7a67b8bc753759d5324e0b10610.h  ffx_frameinterpolation_debug_view_pass_wave64_12453ed5896b1a3d94e1d18d6bfa8e3d.h  ffx_frameinterpolation_debug_view_pass_wave64_16bit_a884bddfe7ac56c6a7cf43be4e561664.h  ffx_frameinterpolation_debug_view_pass_wave64_16bit_permutations.h  ffx_frameinterpolation_debug_view_pass_wave64_permutations.h.d  ffx_frameinterpolation_disocclusion_mask_pass_16bit_675d70969139b2bf5f8f11ff68134535.h  ffx_frameinterpolation_disocclusion_mask_pass_16bit_a0770c130d7e67ed084dbf5794d6b1c9.h  ffx_frameinterpolation_disocclusion_mask_pass_16bit_permutations.h  ffx_frameinterpolation_disocclusion_mask_pass_16bit_permutations.h.d  ffx_frameinterpolation_disocclusion_mask_pass_5744407c26f20a821595d1ebb13f92b9.h  ffx_frameinterpolation_disocclusion_mask_pass_permutations.h  ffx_frameinterpolation_disocclusion_mask_pass_wave64_16bit_15840bd84dc0315aedbbde95c433f2cf.h  ffx_frameinterpolation_disocclusion_mask_pass_wave64_16bit_permutations.h  ffx_frameinterpolation_disocclusion_mask_pass_wave64_5093d5795a7c3da6270b08572564b039.h  ffx_frameinterpolation_game_motion_vector_field_pass_16bit_c44d0a38698049414fed348e1dc2af51.h  ffx_frameinterpolation_game_motion_vector_field_pass_16bit_permutations.h  ffx_frameinterpolation_game_motion_vector_field_pass_cd1cc474061e0ebfdeb4d36577c0a809.h  ffx_frameinterpolation_game_motion_vector_field_pass_wave64_0fa548efddd9de9b6694a11ffff0d551.h  ffx_frameinterpolation_game_motion_vector_field_pass_wave64_16bit_permutations.h.d  ffx_frameinterpolation_game_motion_vector_field_pass_wave64_permutations.h.d  ffx_frameinterpolation_inpainting_pass_16bit_3f4feb5d674f0559e59712825fb1a86a.h  ffx_frameinterpolation_inpainting_pass_16bit_permutations.h  ffx_frameinterpolation_inpainting_pass_16bit_permutations.h.d  ffx_frameinterpolation_inpainting_pass_7f7e983f969ee216216211b8d1728a30.h  ffx_frameinterpolation_optical_flow_vector_field_pass_wave64_16bit_permutations.h.d  ffx_frameinterpolation_optical_flow_vector_field_pass_wave64_permutations.h.d  ffx_frameinterpolation_pass_16bit_permutations.h.d  ffx_frameinterpolation_pass_permutations.h  ffx_frameinterpolation_pass_wave64_16bit_61617af0b8a34087596877bb99091584.h  (+351 more)
sys/shader_permutations/vk/: ffx_frameinterpolation_compute_game_vector_field_inpainting_pyramid_pass_16bit_93963115f7d4030e9a55a13119d0666c.h  ffx_frameinterpolation_compute_game_vector_field_inpainting_pyramid_pass_wave64_16bit_93963115f7d4030e9a55a13119d0666c.h  ffx_frameinterpolation_compute_game_vector_field_inpainting_pyramid_pass_wave64_16bit_permutations.h  ffx_frameinterpolation_compute_game_vector_field_inpainting_pyramid_pass_wave64_93963115f7d4030e9a55a13119d0666c.h  ffx_frameinterpolation_compute_game_vector_field_inpainting_pyramid_pass_wave64_permutations.h  ffx_frameinterpolation_compute_inpainting_pyramid_pass_16bit_94bd922288490792f1e91f6637e60272.h  ffx_frameinterpolation_compute_inpainting_pyramid_pass_16bit_permutations.h  ffx_frameinterpolation_compute_inpainting_pyramid_pass_permutations.h.d  ffx_frameinterpolation_compute_inpainting_pyramid_pass_wave64_16bit_94bd922288490792f1e91f6637e60272.h  ffx_frameinterpolation_compute_inpainting_pyramid_pass_wave64_permutations.h.d  ffx_frameinterpolation_debug_view_pass_16bit_ae15ee305880fbfa047c610f7cbf2435.h  ffx_frameinterpolation_debug_view_pass_b681674a05d00a067886bd058d7b8173.h  ffx_frameinterpolation_debug_view_pass_permutations.h  ffx_frameinterpolation_debug_view_pass_wave64_16bit_ae15ee305880fbfa047c610f7cbf2435.h  ffx_frameinterpolation_debug_view_pass_wave64_16bit_permutations.h  ffx_frameinterpolation_debug_view_pass_wave64_16bit_permutations.h.d  ffx_frameinterpolation_disocclusion_mask_pass_16bit_3700c306c401746b86eda22187188390.h  ffx_frameinterpolation_disocclusion_mask_pass_16bit_permutations.h  ffx_frameinterpolation_disocclusion_mask_pass_16bit_permutations.h.d  ffx_frameinterpolation_disocclusion_mask_pass_permutations.h  ffx_frameinterpolation_disocclusion_mask_pass_wave64_16bit_permutations.h  ffx_frameinterpolation_inpainting_pass_permutations.h.d  (+389 more)
sys/src/: bindings.rs  d3d12_bindings.rs  dx12_bindings.rs  error.rs  frameinterpolation_bindings.rs  fsr1_bindings.rs  fsr2_bindings.rs  fsr3_bindings.rs  fsr3upscaler_bindings.rs  lib.rs  opticalflow_bindings.rs  vk_bindings.rs
sys/tests/: vk_device.rs
(+3170 files in other folders)
