[package]
name = "fidelityfx"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2"
widestring = "1.0"
thiserror = "1.0"
fidelityfx-sys = { path = "sys", version = "0.1.0", default-features = false }

[dependencies.ash]
version = "0.37"
optional = true

[dependencies.windows]
version = "0.54"
optional = true
features = ["Win32_Graphics_Direct3D12", "Win32_Graphics_Dxgi_Common"]

[features]
default = []
vulkan = ["fidelityfx-sys/vulkan", "dep:ash"]
d3d12 = ["fidelityfx-sys/d3d12", "dep:windows"]

[workspace]
members = ["sys"]
