[package]
name = "fidelityfx"
version = "0.1.0"
authors = ["Traverse Research <support@traverseresearch.nl>"]
edition = "2021"
license = "MIT"
homepage = "https://traverseresearch.nl"
repository = "https://github.com/Traverse-Research/fidelityfx-rs"
description = "Rust Bindings for the AMD FidelityFX SDK"
include = ["src", "LICENSE"]
categories = ["rendering"] # https://crates.io/category_slugs
keywords = ["fidelity", "fx", "fidelity-fx", "fidelityfx", "upscaling", "vulkan", "dx12", "directx12"]

[dependencies]
bitflags = "2"
fidelityfx-sys = { path = "sys", version = "0.1.0", default-features = false }
log = "0.4.21"
thiserror = "1.0.16"
widestring = "1.0"

[dependencies.ash]
version = "0.38"
optional = true

[dependencies.windows]
version = ">=0.58, <= 0.62"
optional = true
features = ["Win32_Graphics_Direct3D12", "Win32_Graphics_Dxgi_Common"]

[features]
default = []
vulkan = ["fidelityfx-sys/vulkan", "dep:ash"]
d3d12 = ["fidelityfx-sys/d3d12", "dep:windows"]

[workspace]
members = ["sys"]
