[package]
name = "fidelityfx-lib"
version = "0.1.0"
edition = "2024"
authors = ["Traverse Research <support@traverseresearch.nl>"]
license = "MIT"
homepage = "https://traverseresearch.nl"
repository = "https://github.com/Traverse-Research/fidelityfx-rs"
description = "Precompiled signed libraries for AMD FidelityFX SDK 1.1.4"
categories = ["rendering", "graphics", "external-ffi-bindings"] # https://crates.io/category_slugs
keywords = ["fidelityfx", "fsr", "upscaling", "vulkan", "d3d12"]
rust-version = "1.74"

[dependencies]
