[package]
name = "fidelityfx-sys"
version = "0.1.0"
authors = ["Traverse Research <support@traverseresearch.nl>"]
edition = "2021"
license = "MIT"
homepage = "https://traverseresearch.nl"
repository = "https://github.com/Traverse-Research/fidelityfx-rs"
description = "Low-level sys bindings for AMD's FidelityFX SDK"
include = ["src", "LICENSE"]
categories = ["rendering", "graphics", "external-ffi-bindings"] # https://crates.io/category_slugs
keywords = ["fidelityfx", "fsr", "upscaling", "vulkan", "d3d12"]
rust-version = "1.74"

[dependencies]
ash = { version = "0.38", optional = true, default-features = false }
glob = "0.3"
widestring = "1.0"

[build-dependencies]
# Pin version to have control over how everything is generated (there is a CI
# check that validates that all files are generated as currently checked in):
bindgen = { version = "=0.72.1", optional = true }
cc = "1.0.83"
glob = "0.3"

[features]
default = ["vulkan", "dx12"]
vulkan = ["dep:ash"]
dx12 = []
generate-bindings = ["dep:bindgen"]
